--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 jenkins.url=localhost:8080/test
 jenkins.header.content=application/json
+jenkins.header.authtoken="23123sadas"
+jenkins.img.url=asfdasdf
+
+config.data="asdad"
